Liceo Scientifico 4/Informatica Liceo/Java/Compiti estate/Da libro di testo/Capitolo 3/Problema 5/Errore.txt
Test.java:7: error: cannot assign a value to final variable perclva
                perclva = 21;
                ^
1 error